# mimikyu

./: Cargo.toml  README.md
src/: handlers.rs  index.css  index.html  index.mjs  main.rs  state.rs
src/frontend/: index.css  index.html  index.mjs
