[package]
name = "mimikyu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.9", features = ["macros", "ws"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sysinfo = "0.28.1"
tokio = { version = "1.25.0", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
rand = "0.8.5"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
rpi-led-matrix = "0.4.0"
